Bug fix: buttons not showing bug after flashcard verse deletion

--- a/bibleflashcardsjs/static/bibleflashcardsjs/css/styles.css
+++ b/bibleflashcardsjs/static/bibleflashcardsjs/css/styles.css
@@ -1,3 +1,14 @@
+*{
+ font-family: Arial, Helvetica, sans-serif;
+ font-size: 16px;
+ box-sizing: border-box;
+ border: 0px solid blue;
+}
+
+body{
+ font-size: 2rem;
+}
+
 /* custom global css variables that are at the <html> element root level or scope */
 :root {
  --accent: #6e48ad;
@@ -71,16 +82,37 @@ hr {
 
 button{
  border-radius: 1em !important;
+ background-color: #007bff;
 }
 
 input, select, textarea {
  width: 100%;
 }
 .alert-custom{
- background-color: #007bff;
- color: #ffffff;
+ background-color: var(--marked);
+ color: #000000;
+}
+
+#index-main{
+ display: block;
+}
+
+#boxes-main{
+ display: none;
 }
 
 #text-verse{
  width: 12em;
+}
+
+a, a:visited{
+ color: #007bff;
+}
+
+.flex-row{
+ display: flex;
+ flex-direction: row;
+ justify-content: flex-start;
+ align-items: center;
+ gap: 4em;
 }
